# QTerrainRenderer

./: CMakeLists.txt  README.md
QTerrainRenderer/: CMakeLists.txt
QTerrainRenderer/include/: qterrain_renderer.hpp
QTerrainRenderer/include/qtr/: camera.hpp  config.hpp  gl_errors.hpp  imgui_widgets.hpp  instanced_mesh.hpp  light.hpp  logger.hpp  mesh.hpp  primitives.hpp  render_widget.hpp  shader.hpp  shader_manager.hpp  texture.hpp  texture_manager.hpp  utils.hpp  water_colors.hpp  windows_patch.hpp
QTerrainRenderer/include/qtr/shaders/: depth_map.frag  depth_map.vert  diffuse_basic.frag  diffuse_basic.vert  diffuse_blinn_phong.frag  diffuse_phong.frag  shadow_map_depth_pass.frag  shadow_map_depth_pass.vert  shadow_map_lit_pass.frag  shadow_map_lit_pass.vert  viewer2d_cmap.frag  viewer2d_cmap.vert
QTerrainRenderer/src/: camera.cpp  config.cpp  imgui_widgets.cpp  light.cpp  logger.cpp  mesh.cpp  primitives.cpp  render_widget.cpp  render_widget_depth_map.cpp  render_widget_io.cpp  render_widget_shadow_map.cpp  shader.cpp  shader_manager.cpp  texture.cpp  texture_manager.cpp  utils.cpp
QTerrainRenderer/src/primitives/: cube.cpp  downward_triangles.cpp  heightmap.cpp  leaf.cpp  path.cpp  plane.cpp  rectangle.cpp  rock.cpp  sphere.cpp  tree.cpp
QTerrainRenderer/src/render_widget/: depth_map.cpp  io.cpp  json.cpp  paint_gl.cpp  render_2d.cpp  render_3d.cpp  render_widget.cpp  shadow_map.cpp
scripts/: format_src.sh
tests/test_qterrain_renderer/: CMakeLists.txt  main.cpp
